# speech-tg-bot

./: .gitignore  pyproject.toml  speech_bot.py  test_func.py
