[tool.poetry]
name = "speech bot"
version = "0.1.0"
description = ""
authors = ["Максим <kosmakovmaksim@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gtts = "^2.5.3"
pytelegrambotapi = "^4.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
